<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:text="@string/note1"/>

            <EditText
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:id="@+id/note1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/coefficient1" />

            <EditText
                android:id="@+id/coefficient1"
                android:layout_width="104dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:text="@string/note2"/>

            <EditText
                android:id="@+id/note2"
                android:layout_width="104dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/coefficient2" />

            <EditText
                android:id="@+id/coefficient2"
                android:layout_width="104dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:text="@string/note3"/>

            <EditText
                android:id="@+id/note3"
                android:layout_width="104dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/coefficient3" />

            <EditText
                android:id="@+id/coefficient3"
                android:layout_width="104dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/boutonCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="afficher"
            android:text="@string/calculer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="ResetEditText"
            android:text="@string/effacer" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quitter"
            android:text="@string/quitter" />

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>